--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,15 @@
 {
+  "CredencialesClientesDatabaseSettings": {
+    "ClientesCollectionName": "CredencialesCliente",
+    "ConnectionString": "mongodb://desarrollo:passwd45523@104.236.203.88:27017",
+    "DatabaseName": "CExpedientes"
+  },
   "ClientesStoreDatabaseSettings": {
     "ClientesCollectionName": "Expedientes",
     "ConnectionString": "mongodb://desarrollo:passwd45523@104.236.203.88:27017",
     "DatabaseName": "CExpedientes"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
