--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,10 @@
 {
-  "CredencialesClientesDatabaseSettings": {
-    "ClientesCollectionName": "CredencialesCliente",
-    "ConnectionString": "mongodb://desarrollo:passwd45523@104.236.203.88:27017",
-    "DatabaseName": "CExpedientes"
-  },
+
   "ClientesStoreDatabaseSettings": {
     "ClientesCollectionName": "Expedientes",
+    "ClientesCollectionName2": "CredencialesCliente",
+    "ClientesCollectionName3": "Cat_Tipo_Expediente",
+    "ClientesCollectionName4": "TipocSubExpediente",
     "ConnectionString": "mongodb://desarrollo:passwd45523@104.236.203.88:27017",
     "DatabaseName": "CExpedientes"
   },
