--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/clientes",
+      "launchUrl": "api/credenciales",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
