--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,11 @@
 {
 
   "ClientesStoreDatabaseSettings": {
-    "ClientesCollectionName": "Expedientes",
-    "ClientesCollectionName2": "CredencialesCliente",
-    "ClientesCollectionName3": "Cat_Tipo_Expediente",
-    "ClientesCollectionName4": "TipocSubExpediente",
+    "ClientesCollectionName": "TR_Expedientes",
+    "ClientesCollectionName2": "TR_Credenciales_Cliente",
+    "ClientesCollectionName3": "TR_Tipo_Expediente",
+    "ClientesCollectionName4": "TR_Tipo_Sub_Expediente",
+    "ClientesCollectionName5": "TR_Tipo_Documento",
     "ConnectionString": "mongodb://desarrollo:passwd45523@104.236.203.88:27017",
     "DatabaseName": "CExpedientes"
   },
