Cambios y mejora para la ruta de Dodumentos de formalizacion

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,7 @@
     "ClientesCollectionName3": "TR_Tipo_Expediente",
     "ClientesCollectionName4": "TR_Tipo_Sub_Expediente",
     "ClientesCollectionName5": "TR_Tipo_Documento",
+    "ClientesCollectionName6": "TR_Tipo_Sub_SubExpediente",
     "ConnectionString": "mongodb://desarrollo:passwd45523@104.236.203.88:27017",
     "DatabaseName": "CExpedientes"
   },
