--- a/ApiCargaDocsFormaliza.csproj
+++ b/ApiCargaDocsFormaliza.csproj
@@ -5,10 +5,15 @@
     <UserSecretsId>abb6d70c-d6ee-48f3-9a97-5c68fc9a2e22</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\DanielPerez\source\repos\ApiCargaDocsFormaliza\ApiCargaDocsFormaliza.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="5.6.3" />
   </ItemGroup>
 
 
