--- a/ApiCargaDocsFormaliza.csproj
+++ b/ApiCargaDocsFormaliza.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\DanielPerez\source\repos\ApiCargaDocsFormaliza\ApiCargaDocsFormaliza.xml</DocumentationFile>
+    <DocumentationFile>C:\Users\Desarrollo\source\repos\josedejesus-dev\ApiCargaDocsFormaliza\ApiCargaDocsFormaliza.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
